--- a/templates/plantilla.html
+++ b/templates/plantilla.html
@@ -30,11 +30,11 @@
           <h4>Accion</h4>
           <label>
             Si
-            <input type="radio" name="accion" value="si" />
+            <input type="radio" name="Educativo" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="accion" value="no" />
+            <input type="radio" name="Educativo" value="no" />
           </label>
         </section>
 
