--- a/templates/plantilla.html
+++ b/templates/plantilla.html
@@ -42,11 +42,11 @@
           <h4>Aventura</h4>
           <label>
             Si
-            <input type="radio" name="aventura" value="si" />
+            <input type="radio" name="Habitos_de_estudio" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="aventura" value="no" />
+            <input type="radio" name="Habitos_de_estudio" value="no" />
           </label>
         </section>
 
@@ -54,11 +54,11 @@
           <h4>Mundo abierto</h4>
           <label>
             Si
-            <input type="radio" name="mundo_abierto" value="si" />
+            <input type="radio" name="emprendimiento" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="mundo_abierto" value="no" />
+            <input type="radio" name="emprendimiento" value="no" />
           </label>
         </section>
 
@@ -66,11 +66,11 @@
           <h4>Infantil</h4>
           <label>
             Si
-            <input type="radio" name="infantil" value="si" />
+            <input type="radio" name="Aventura" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="infantil" value="no" />
+            <input type="radio" name="Aventura" value="no" />
           </label>
         </section>
 
@@ -78,11 +78,11 @@
           <h4>Disparos</h4>
           <label>
             Si
-            <input type="radio" name="disparos" value="si" />
+            <input type="radio" name="Medieval" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="disparos" value="no" />
+            <input type="radio" name="Medieval" value="no" />
           </label>
         </section>
 
@@ -90,11 +90,11 @@
           <h4>Mitologia</h4>
           <label>
             Si
-            <input type="radio" name="mitologia" value="si" />
+            <input type="radio" name="Piratas" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="mitologia" value="no" />
+            <input type="radio" name="Piratas" value="no" />
           </label>
         </section>
 
@@ -114,11 +114,11 @@
           <h4>Historia</h4>
           <label>
             Si
-            <input type="radio" name="historia" value="si" />
+            <input type="radio" name="Horror" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="historia" value="no" />
+            <input type="radio" name="Horror" value="no" />
           </label>
         </section>
 
@@ -138,11 +138,11 @@
           <h4>Vista panoramica</h4>
           <label>
             Si
-            <input type="radio" name="vista_panoramica" value="si" />
+            <input type="radio" name="Vampiros" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="vista_panoramica" value="no" />
+            <input type="radio" name="Vampiros" value="no" />
           </label>
         </section>
 
@@ -150,11 +150,11 @@
           <h4>Militares</h4>
           <label>
             Si
-            <input type="radio" name="militares" value="si" />
+            <input type="radio" name="Infantil" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="militares" value="no" />
+            <input type="radio" name="Infantil" value="no" />
           </label>
         </section>
 
@@ -162,11 +162,11 @@
           <h4>Construccion</h4>
           <label>
             Si
-            <input type="radio" name="construccion" value="si" />
+            <input type="radio" name="Terror" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="construccion" value="no" />
+            <input type="radio" name="Terror" value="no" />
           </label>
         </section>
 
@@ -174,11 +174,11 @@
           <h4>Pixel art</h4>
           <label>
             Si
-            <input type="radio" name="pixel_art" value="si" />
+            <input type="radio" name="Juvenil" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="pixel_art" value="no" />
+            <input type="radio" name="Juvenil" value="no" />
           </label>
         </section>
 
@@ -186,11 +186,11 @@
           <h4>Comedia</h4>
           <label>
             Si
-            <input type="radio" name="comedia" value="si" />
+            <input type="radio" name="Zombies" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="comedia" value="no" />
+            <input type="radio" name="Zombies" value="no" />
           </label>
         </section>
 
@@ -198,135 +198,16 @@
           <h4>Lucha</h4>
           <label>
             Si
-            <input type="radio" name="lucha" value="si" />
+            <input type="radio" name="Misterio" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="lucha" value="no" />
+            <input type="radio" name="Misterio" value="no" />
           </label>
         </section>
 
-        <section>
-          <h4>Primera persona</h4>
-          <label>
-            Si
-            <input type="radio" name="primera_persona" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="primera_persona" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Mundo post apocaliptico</h4>
-          <label>
-            Si
-            <input type="radio" name="mundo_post_apocaliptico" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="mundo_post_apocaliptico" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Frenetico</h4>
-          <label>
-            Si
-            <input type="radio" name="frenetico" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="frenetico" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Gestion</h4>
-          <label>
-            Si
-            <input type="radio" name="gestion" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="gestion" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Sangrientos</h4>
-          <label>
-            Si
-            <input type="radio" name="sangrientos" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="sangrientos" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Interestelar</h4>
-          <label>
-            Si
-            <input type="radio" name="interestelar" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="interestelar" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Plataformas</h4>
-          <label>
-            Si
-            <input type="radio" name="plataformas" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="plataformas" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Asaltos</h4>
-          <label>
-            Si
-            <input type="radio" name="asaltos" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="asaltos" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Lineales</h4>
-          <label>
-            Si
-            <input type="radio" name="lineales" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="lineales" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Mazmorras</h4>
-          <label>
-            Si
-            <input type="radio" name="mazmorras" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="mazmorras" value="no" />
-          </label>
-        </section>
       </fieldset>
-      <button name="submit" type="submit">Predecir videojuego</button>
+      <button name="submit" type="submit">Predecir </button>
     </form>
   </body>
 </html>
