[add] bug fixed

--- a/templates/plantilla.html
+++ b/templates/plantilla.html
@@ -27,7 +27,7 @@
     <form action="{{ url_for('devolver') }}" method="post">
       <fieldset>
         <section>
-          <h4>Accion</h4>
+          <h4>Educativo</h4>
           <label>
             Si
             <input type="radio" name="Educativo" value="si" />
@@ -39,7 +39,7 @@
         </section>
 
         <section>
-          <h4>Aventura</h4>
+          <h4>Habitos_de_estudio</h4>
           <label>
             Si
             <input type="radio" name="Habitos_de_estudio" value="si" />
@@ -51,7 +51,7 @@
         </section>
 
         <section>
-          <h4>Mundo abierto</h4>
+          <h4>emprendimiento</h4>
           <label>
             Si
             <input type="radio" name="emprendimiento" value="si" />
@@ -63,7 +63,7 @@
         </section>
 
         <section>
-          <h4>Infantil</h4>
+          <h4>Aventura</h4>
           <label>
             Si
             <input type="radio" name="Aventura" value="si" />
@@ -75,7 +75,7 @@
         </section>
 
         <section>
-          <h4>Disparos</h4>
+          <h4>Medieval</h4>
           <label>
             Si
             <input type="radio" name="Medieval" value="si" />
@@ -87,7 +87,7 @@
         </section>
 
         <section>
-          <h4>Mitologia</h4>
+          <h4>Piratas</h4>
           <label>
             Si
             <input type="radio" name="Piratas" value="si" />
@@ -99,7 +99,7 @@
         </section>
 
         <section>
-          <h4>Prota femenina</h4>
+          <h4>prota_femenina</h4>
           <label>
             Si
             <input type="radio" name="prota_femenina" value="si" />
@@ -111,7 +111,7 @@
         </section>
 
         <section>
-          <h4>Historia</h4>
+          <h4>Horror</h4>
           <label>
             Si
             <input type="radio" name="Horror" value="si" />
@@ -135,7 +135,7 @@
         </section>
 
         <section>
-          <h4>Vista panoramica</h4>
+          <h4>Vampiros</h4>
           <label>
             Si
             <input type="radio" name="Vampiros" value="si" />
@@ -147,7 +147,7 @@
         </section>
 
         <section>
-          <h4>Militares</h4>
+          <h4>Infantil</h4>
           <label>
             Si
             <input type="radio" name="Infantil" value="si" />
@@ -159,7 +159,7 @@
         </section>
 
         <section>
-          <h4>Construccion</h4>
+          <h4>Terror</h4>
           <label>
             Si
             <input type="radio" name="Terror" value="si" />
@@ -171,7 +171,7 @@
         </section>
 
         <section>
-          <h4>Pixel art</h4>
+          <h4>Juvenil</h4>
           <label>
             Si
             <input type="radio" name="Juvenil" value="si" />
@@ -183,7 +183,7 @@
         </section>
 
         <section>
-          <h4>Comedia</h4>
+          <h4>Zombies</h4>
           <label>
             Si
             <input type="radio" name="Zombies" value="si" />
@@ -195,7 +195,7 @@
         </section>
 
         <section>
-          <h4>Lucha</h4>
+          <h4>Misterio</h4>
           <label>
             Si
             <input type="radio" name="Misterio" value="si" />
