--- a/templates/bienvenido.html
+++ b/templates/bienvenido.html
@@ -43,7 +43,7 @@
     </style>
   </head>
   <body>
-    <h1>Bienvenido al sistema experto de videojuegos</h1>
+    <h1>Bienvenido al sistema experto de libros y novelas</h1>
 
     <main>
       <form action="{{ url_for('redirectToExpert') }}" method="post">
