--- a/templates/juego_no_encontrado.html
+++ b/templates/juego_no_encontrado.html
@@ -18,7 +18,7 @@
     }
   </style>
   <body>
-    <h1>Actualmente no tenemos un juego que se adapte a sus gustos</h1>
+    <h1>Actualmente no tenemos libros que se adapten a sus gustos</h1>
 
     <form action="{{ url_for('hello_world') }}" action="GET">
       <button type="submit">Volver a intentar</button>
