--- a/templates/plantilla.html
+++ b/templates/plantilla.html
@@ -99,14 +99,14 @@
         </section>
 
         <section>
-          <h4>prota_femenina</h4>
+          <h4>infantil</h4>
           <label>
             Si
-            <input type="radio" name="prota_femenina" value="si" />
+            <input type="radio" name="infantil" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="prota_femenina" value="no" />
+            <input type="radio" name="infantil" value="no" />
           </label>
         </section>
 
@@ -123,14 +123,14 @@
         </section>
 
         <section>
-          <h4>Medievales</h4>
+          <h4>Medieval</h4>
           <label>
             Si
-            <input type="radio" name="medievales" value="si" />
+            <input type="radio" name="medieval" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="medievales" value="no" />
+            <input type="radio" name="medieval" value="no" />
           </label>
         </section>
 
