--- a/templates/plantilla.html
+++ b/templates/plantilla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema experto de videojuegos: sugerencias gamers!</title>
+    <title>Sistema experto de libros y novelas: sugerencias de lectura</title>
     <style>
       fieldset {
         border: none;
