--- a/templates/plantilla.html
+++ b/templates/plantilla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema experto de libros y novelas: sugerencias de lectura</title>
+    <title>Sistema experto de videojuegos: sugerencias gamers!</title>
     <style>
       fieldset {
         border: none;
@@ -30,16 +30,16 @@
           <h4>Educativo</h4>
           <label>
             Si
-            <input type="radio" name="Educativo" value="si" />
+            <input type="radio" name="educativo" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Educativo" value="no" />
+            <input type="radio" name="educativo" value="no" />
           </label>
         </section>
 
         <section>
-          <h4>Habitos_de_estudio</h4>
+          <h4>Habitos de estudio</h4>
           <label>
             Si
             <input type="radio" name="Habitos_de_estudio" value="si" />
@@ -51,7 +51,7 @@
         </section>
 
         <section>
-          <h4>emprendimiento</h4>
+          <h4>Emprendimiento</h4>
           <label>
             Si
             <input type="radio" name="emprendimiento" value="si" />
@@ -66,59 +66,11 @@
           <h4>Aventura</h4>
           <label>
             Si
-            <input type="radio" name="Aventura" value="si" />
+            <input type="radio" name="aventura" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Aventura" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Medieval</h4>
-          <label>
-            Si
-            <input type="radio" name="Medieval" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="Medieval" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Piratas</h4>
-          <label>
-            Si
-            <input type="radio" name="Piratas" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="Piratas" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>infantil</h4>
-          <label>
-            Si
-            <input type="radio" name="infantil" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="infantil" value="no" />
-          </label>
-        </section>
-
-        <section>
-          <h4>Horror</h4>
-          <label>
-            Si
-            <input type="radio" name="Horror" value="si" />
-          </label>
-          <label>
-            No
-            <input type="radio" name="Horror" value="no" />
+            <input type="radio" name="aventura" value="no" />
           </label>
         </section>
 
@@ -135,14 +87,38 @@
         </section>
 
         <section>
-          <h4>Vampiros</h4>
+          <h4>Piratas</h4>
           <label>
             Si
-            <input type="radio" name="Vampiros" value="si" />
+            <input type="radio" name="piratas" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Vampiros" value="no" />
+            <input type="radio" name="piratas" value="no" />
+          </label>
+        </section>
+
+        <section>
+          <h4>Horror</h4>
+          <label>
+            Si
+            <input type="radio" name="horror" value="si" />
+          </label>
+          <label>
+            No
+            <input type="radio" name="horror" value="no" />
+          </label>
+        </section>
+
+        <section>
+          <h4>Vampiros</h4>
+          <label>
+            Si
+            <input type="radio" name="vampiros" value="si" />
+          </label>
+          <label>
+            No
+            <input type="radio" name="vampiros" value="no" />
           </label>
         </section>
 
@@ -150,11 +126,11 @@
           <h4>Infantil</h4>
           <label>
             Si
-            <input type="radio" name="Infantil" value="si" />
+            <input type="radio" name="infantil" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Infantil" value="no" />
+            <input type="radio" name="infantil" value="no" />
           </label>
         </section>
 
@@ -162,11 +138,11 @@
           <h4>Terror</h4>
           <label>
             Si
-            <input type="radio" name="Terror" value="si" />
+            <input type="radio" name="terror" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Terror" value="no" />
+            <input type="radio" name="terror" value="no" />
           </label>
         </section>
 
@@ -174,11 +150,11 @@
           <h4>Juvenil</h4>
           <label>
             Si
-            <input type="radio" name="Juvenil" value="si" />
+            <input type="radio" name="juvenil" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Juvenil" value="no" />
+            <input type="radio" name="juvenil" value="no" />
           </label>
         </section>
 
@@ -186,11 +162,11 @@
           <h4>Zombies</h4>
           <label>
             Si
-            <input type="radio" name="Zombies" value="si" />
+            <input type="radio" name="zombies" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Zombies" value="no" />
+            <input type="radio" name="zombies" value="no" />
           </label>
         </section>
 
@@ -198,11 +174,11 @@
           <h4>Misterio</h4>
           <label>
             Si
-            <input type="radio" name="Misterio" value="si" />
+            <input type="radio" name="misterio" value="si" />
           </label>
           <label>
             No
-            <input type="radio" name="Misterio" value="no" />
+            <input type="radio" name="misterio" value="no" />
           </label>
         </section>
 
