--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -91,14 +91,14 @@
       <ul>
         {% for sug in sugerencias %}
         <li>
-          titulo del Libro: {{ sug.titulo }}, porcentaje de ajuste: {{
+          Titulo del libro: {{ sug.titulo }}, porcentaje de ajuste: {{
           sug.porcentaje }}
         </li>
         {% endfor %} {% if sugerencias|length < 3 %}
         <li class="not-enought">No se encontraron mas sugerencias</li>
         {% endif %}
       </ul>
-      {% endif %}
+      {% endif %}s
     </section>
     <form action="{{ url_for('hello_world') }}" action="GET">
       <button type="submit">Volver a intentar</button>
